--- a/profile_app/templates/profile_list.html
+++ b/profile_app/templates/profile_list.html
@@ -13,6 +13,8 @@
             <h1><a href="/">UntitledApp</a></h1>
             </center>
         </header>
+
+        <h1><a href="/">Latest Profiles:</a></h1>
         
         {% for profile in profiles %}
             <article>
