--- a/profile_app/templates/profile.html
+++ b/profile_app/templates/profile.html
@@ -2,15 +2,262 @@
 
 <!DOCTYPE html>
 <html>
-    <head>
+  <head>
+    <title>User's Profile</title>
 
-        <title>User's Profile</title>
+    <!-- BOOTSTRAP -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'profile.css' %}">
+    <!-- CSS -->
+    <link rel="stylesheet" href="{% static 'profile.css' %}" />
 
-    </head>
-    <body>
+    <!-- Font Awesome Icons -->
+    <script
+      src="https://kit.fontawesome.com/e62681f8e0.js"
+      crossorigin="anonymous"
+    ></script>
 
-    </body>
+    <!-- Google Icons and Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fjalla+One&family=Montserrat:wght@600&family=Poppins:ital,wght@0,600;0,700;0,800;0,900;1,900&family=Press+Start+2P&family=Roboto&family=Rowdies:wght@300&family=Yanone+Kaffeesatz&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+  </head>
+
+  <body>
+    <!-- NAV BAR -->
+    <nav
+      class="navbar navbar-expand-md bg-faded bg-dark justify-content-center"
+    >
+      <div class="container">
+        <span href="index.html" class="navbar-brand d-flex w-50 me-auto"></span>
+
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapsingNavbar3"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
+          <ul class="navbar-nav w-100 justify-content-center">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Name</a>
+            </li>
+          </ul>
+
+          <ul class="nav navbar-nav ms-auto w-100 justify-content-end">
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarScrollingDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                <img class="userImage float-end" src="" alt="" />
+              </a>
+              <ul
+                class="dropdown-menu dropdown-menu-right float-end"
+                aria-labelledby="navbarScrollingDropdown"
+              >
+                <li>
+                  <a class="dropdown-item" href="#"
+                    ><i class="userIcon fa-solid fa-user-astronaut"></i>
+                    Account</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#"
+                    ><i class="fa-solid fa-pen-to-square"></i> Edit Profile</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#"
+                    ><i class="fa-solid fa-gear"></i> Settings</a
+                  >
+                </li>
+                <hr />
+                <li>
+                  <a class="dropdown-item" href="#"
+                    ><i class="fa-solid fa-circle-info"></i> Help</a
+                  >
+                </li>
+
+                <li>
+                  <a class="dropdown-item" href="#"
+                    ><i class="fa-solid fa-right-from-bracket"></i> Sign out</a
+                  >
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- SECTIONS -->
+    <!-- INFO SECTION -->
+    <section id="infoSection">
+      <div>
+        <img
+          class="mainUserImage"
+          src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&w=1000&q=80"
+          alt=""
+        />
+        <div class="links">
+          <h5>Placeholder</h5>
+          <h5>Placeholder</h5>
+          <h5>Placeholder</h5>
+          <h5>Placeholder</h5>
+        </div>
+      </div>
+
+      <i class="shareIcon fa-solid fa-share-from-square"></i>
+    </section>
+
+    <!-- CARD SECTION -->
+    <section id="cardSection">
+      <h1 class="cardSectionHeaderText">User's Stuff</h1>
+
+      <div class="container1">
+        <div class="row row-cols-3 row-cols-md-3 g-4 h-100">
+          <div class="col">
+            <div class="card">
+              <img
+                src="https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp"
+                class="card-img-top"
+                alt="Hollywood Sign on The Hill"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Text</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img
+                src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp"
+                class="card-img-top"
+                alt="Palm Springs Road"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Text</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card">
+              <img
+                src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp"
+                class="card-img-top"
+                alt="Palm Springs Road"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Text</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card">
+              <img
+                src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp"
+                class="card-img-top"
+                alt="Palm Springs Road"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Text</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card">
+              <img
+                src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp"
+                class="card-img-top"
+                alt="Los Angeles Skyscrapers"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Text</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img
+                src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp"
+                class="card-img-top"
+                alt="Skyscrapers"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Text</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FOOTER SECTION -->
+
+    <footer>
+      <section class="socialButtons">
+        <ul class="icon-list">
+          <li class="icon-item">
+            <a href="#" class="icon-link"><i class="fa-solid fa-inbox"></i></a>
+          </li>
+
+          <li class="icon-item">
+            <a href="#" class="icon-link"><i class="fab fa-github"></i></a>
+          </li>
+
+          <li class="icon-item">
+            <a href="#" class="icon-link"><i class="fab fa-youtube"></i></a>
+          </li>
+
+          <li class="icon-item">
+            <a href="#" class="icon-link"><i class="fab fa-linkedin-in"></i></a>
+          </li>
+        </ul>
+      </section>
+
+      <div class="container2">
+        <p class="float-end mb-1">
+          <a class="material-symbols-outlined" href="#"
+            ><span style="color: black" class="material-symbols-outlined">
+              arrow_upward
+            </span></a
+          >
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
