--- a/UntitledApp/templates/homepage.html
+++ b/UntitledApp/templates/homepage.html
@@ -5,7 +5,7 @@
         <title>User Profiles</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'profile_list.css' %}">
+        <link rel="stylesheet" href="{% static 'homepage.css' %}">
     </head>
     <body>
         <header>
@@ -18,7 +18,7 @@
         
         {% for profile in profiles %}
             <article>
-                <h2><a href="">{{ profile.title }}</a></h2>
+                <h2><a href="{% url 'profile' owner=profile.owner %}">{{ profile.title }}</a></h2>
                 <p>Description: {{ profile.description|linebreaksbr }}</p>
                 <time>Last updated: {{ profile.updated_date }}</time>
             </article>
