--- a/UntitledApp/templates/profile.html
+++ b/UntitledApp/templates/profile.html
@@ -8,12 +8,6 @@
       src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&w=100&q=80"
       alt=""
     />
-    <div class="links">
-      <h5>Placeholder</h5>
-      <h5>Placeholder</h5>
-      <h5>Placeholder</h5>
-      <h5>Placeholder</h5>
-    </div>
   </div>
 
   <i class="shareIcon fa-solid fa-share-from-square"></i>
@@ -21,7 +15,7 @@
 
 <!-- CARD SECTION -->
 <section id="cardSection">
-  <h1 class="cardSectionHeaderText">{{profile.owner}}'s Stuff</h1>
+  <h1 class="cardSectionHeaderText">{{profile.owner}}'s Cards</h1>
   <h3 class="cardSectionHeaderText">{{profile.description}}</h1>
 
   <div class="container1">
