--- a/UntitledApp/templates/base.html
+++ b/UntitledApp/templates/base.html
@@ -3,12 +3,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-    <link href="{% static 'base.css' %}" rel="stylesheet"/>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <link href="{% static 'base.css' %}" rel="stylesheet" />
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+      crossorigin="anonymous"
+    ></script>
     <title>{% block title %}UntitledApp{% endblock %}</title>
 
     <!-- BOOTSTRAP -->
@@ -37,42 +48,81 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4 justify-content-center">
+    <nav
+      class="navbar navbar-expand-lg navbar-dark bg-dark mb-4 justify-content-center"
+    >
       <div class="container">
         <ul class="navbar-nav w-100 justify-content-center">
-          <a class="navbar-brand justify-content-center" href="{% url 'homepage' %}">UntitledApp</a>
+          <a
+            class="navbar-brand justify-content-center"
+            href="{% url 'homepage' %}"
+            >UntitledApp</a
+          >
         </ul>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             {% if user.is_authenticated %}
-              <li class="nav-item">
-              </li>
+            <li class="nav-item"></li>
             {% endif %}
           </ul>
           {% if user.is_authenticated %}
-            <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  {{ user.username }}
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="{% url 'profile' owner=user.username %}"><i class="fa-solid fa-user"></i> Profile</a>
-                  <a class="dropdown-item" href="#"><i class="fa-solid fa-gear"></i> Settings</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#"><i class="fa-solid fa-circle-info"></i> Help</a>
-                  <a class="dropdown-item" href="{% url 'logout' %}"><i class="fa-solid fa-right-from-bracket"></i> Sign out</a>
-                  <a class="dropdown-item" href="{% url 'password_change' %}"><i class="fa-solid fa-key"></i> Change password</a>
-                </div>
-              </li>
-            </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                {{ user.username }}
+              </a>
+              <div
+                class="dropdown-menu dropdown-menu-right"
+                aria-labelledby="navbarDropdown"
+              >
+                <a
+                  class="dropdown-item"
+                  href="{% url 'profile' owner=user.username %}"
+                  ><i class="fa-solid fa-user"></i> Profile</a
+                >
+                <a class="dropdown-item" href="#"
+                  ><i class="fa-solid fa-gear"></i> Settings</a
+                >
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#"
+                  ><i class="fa-solid fa-circle-info"></i> Help</a
+                >
+                <a class="dropdown-item" href="{% url 'logout' %}"
+                  ><i class="fa-solid fa-right-from-bracket"></i> Sign out</a
+                >
+                <a class="dropdown-item" href="{% url 'password_change' %}"
+                  ><i class="fa-solid fa-key"></i> Change password</a
+                >
+              </div>
+            </li>
+          </ul>
           {% else %}
-            <form class="form-inline my-2 my-lg-0">
-              <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
-              <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
-            </form>
+          <form class="form-inline my-2 my-lg-0">
+            <a href="{% url 'login' %}" class="btn btn-outline-secondary"
+              >Log in</a
+            >
+            <a href="{% url 'signup' %}" class="btn btn-primary ml-2"
+              >Sign up</a
+            >
+          </form>
           {% endif %}
         </div>
       </div>
@@ -80,10 +130,7 @@
   </head>
 
   <body>
-    <div class="container">
-      {% block content %}
-      {% endblock %}
-    </div>
+    <div class="container">{% block content %} {% endblock %}</div>
   </body>
 
   <footer>
