--- a/UntitledApp/templates/registration/password_change_done.html
+++ b/UntitledApp/templates/registration/password_change_done.html
@@ -1,6 +1,4 @@
-{% extends 'base.html' %}
-
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <h2>Change password</h2>
-<p style="color:green;">Password changed with success!</p>
+<p style="color: green">Password changed with success!</p>
 {% endblock %}
