--- a/UntitledApp/templates/profile.html
+++ b/UntitledApp/templates/profile.html
@@ -3,11 +3,9 @@
 {% block content %}
 <section id="infoSection">
   <div>
-    <img
-      class="mainUserImage"
+    <img class="mainUserImage"
       src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&w=100&q=80"
-      alt=""
-    />
+      alt="" />
   </div>
 
   <i class="shareIcon fa-solid fa-share-from-square"></i>
@@ -18,90 +16,71 @@
   <h1 class="cardSectionHeaderText">{{profile.owner}}'s Cards</h1>
   <h3 class="cardSectionHeaderText">{{profile.description}}</h1>
 
-  <div class="container1">
-    <div class="row row-cols-3 row-cols-md-3 g-4 h-100">
-      <div class="col">
-        <div class="card">
-          <img
-            src="https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp"
-            class="card-img-top"
-            alt="Hollywood Sign on The Hill"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Text</p>
+    <div class="container1">
+      <div class="row row-cols-3 row-cols-md-3 g-4 h-100">
+        <div class="col">
+          <div class="card">
+            <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp" class="card-img-top"
+              alt="Hollywood Sign on The Hill" />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Text</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img
-            src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp"
-            class="card-img-top"
-            alt="Palm Springs Road"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Text</p>
+        <div class="col">
+          <div class="card">
+            <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top"
+              alt="Palm Springs Road" />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Text</p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="col">
-        <div class="card">
-          <img
-            src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp"
-            class="card-img-top"
-            alt="Palm Springs Road"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Text</p>
+        <div class="col">
+          <div class="card">
+            <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top"
+              alt="Palm Springs Road" />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Text</p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="col">
-        <div class="card">
-          <img
-            src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp"
-            class="card-img-top"
-            alt="Palm Springs Road"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Text</p>
+        <div class="col">
+          <div class="card">
+            <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top"
+              alt="Palm Springs Road" />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Text</p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="col">
-        <div class="card">
-          <img
-            src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp"
-            class="card-img-top"
-            alt="Los Angeles Skyscrapers"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Text</p>
+        <div class="col">
+          <div class="card">
+            <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top"
+              alt="Los Angeles Skyscrapers" />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Text</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img
-            src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp"
-            class="card-img-top"
-            alt="Skyscrapers"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Text</p>
+        <div class="col">
+          <div class="card">
+            <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" class="card-img-top" alt="Skyscrapers" />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Text</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 </section>
 {% endblock %}
