--- a/UntitledApp/templates/registration/password_reset_confirm.html
+++ b/UntitledApp/templates/registration/password_reset_confirm.html
@@ -12,9 +12,7 @@
         {% else %}
         <p class="text-danger">Invalid token.</p>
         <p class="card-text">
-          <a href="{% url 'password_reset' %}"
-            >Request a new password reset token</a
-          >
+          <a href="{% url 'password_reset' %}">Request a new password reset token</a>
         </p>
         {% endif %}
       </div>
