--- a/UntitledApp/templates/profile.html
+++ b/UntitledApp/templates/profile.html
@@ -3,9 +3,11 @@
 {% block content %}
 <section id="infoSection">
   <div>
-    <img class="mainUserImage"
-      src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&w=100&q=80"
-      alt="" />
+    {% if profile.profile_image %}
+    <img class="mainUserImage" src="{{profile.profile_image.url}}" alt="Profile Image" />
+    {% else %}
+    <img class="mainUserImage" src="https://www.gravatar.com/avatar/?s=200" alt="Profile Image" />
+    {% endif %}
   </div>
 
   <i class="shareIcon fa-solid fa-share-from-square"></i>
